--- a/runners/mocha-sample/package.json
+++ b/runners/mocha-sample/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "chai": "4.2.0",
     "mocha": "6.0.2"
+  },
+  "devDependencies": {
+    "sinon": "7.2.7",
+    "sinon-chai": "3.3.0"
   }
 }
