--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,6 +8,7 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
+    "cucumber": "npx babel-node --presets=@babel/react,@babel/preset-env node_modules/cucumber/bin/cucumber-js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -23,7 +24,15 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.4.0",
+    "@babel/node": "7.2.2",
+    "@babel/preset-env": "7.4.1",
+    "@babel/preset-react": "7.0.0",
+    "chai": "4.2.0",
+    "cucumber": "5.1.0",
     "enzyme": "3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2"
+    "enzyme-adapter-react-16": "^1.11.2",
+    "selenium-webdriver": "^4.0.0-alpha.1"
   }
 }
